<resources>
    <string name="app_name">Audience Counter</string>
    <string name="empty_audience_list">Nenhuma assistência salva</string>
    <string name="saved_audience_display_text">Contagens Salvas (Rolável):</string>
    <string name="saved_audiences_presentation_text">%1$s - %2$s pessoas</string>
    <string name="reset_button_text">Zerar</string>
    <string name="save_button_text">Salvar</string>
    <string name="developer_credits">Criado por Cleriston Pereira</string>
    <string name="clear_button_text">Limpar contagens</string>
    <string name="confirmation_dialog_message">Está certo sobre limpar as contagens?</string>
    <string name="confirmation_dialog_title">Confirme a deleção</string>
    <string name="confirm_button_text">Limpar registros</string>
    <string name="cancel_button_text">Cancelar</string>
    <string name="start_new_count">Iniciar Nova Contagem</string>
    <string name="number_of_rows">Quantidade de Fileiras</string>
    <string name="row_count_text">Contagem da Fileira %1$s</string>
    <string name="next_row">Próxima Fileira</string>
    <string name="finish_counting">Finalizar Contagem</string>
    <string name="counts_by_row_text">Contagens por Fileira:</string>
    <string name="row_count_tracking_text">Fileira %1$s: %2$s pessoas</string>
    <string name="total_people">Total de Pessoas: %1$s</string>
    <string name="save_total">Salvar Total</string>
    <string name="direct_count_tab_title">Contagem Direta</string>
    <string name="row_count_tab_title">Contagem por Fileira</string>
    <string name="persistence_error_message">Não foi possível concluir a operação. Tente novamente.</string>
</resources>
